fix: allow all CORS origins for monolithic deployment